# linerule-rs

./: .editorconfig  .gitattributes  .gitignore  .taplo.toml  .yamlfmt  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Justfile  LICENSE-APACHE  LICENSE-MIT  README.md  _typos.toml  bacon.toml  biome.json  clippy.toml  codecov.yml  commitlint.config.mjs  committed.toml  compose.yaml  compose.yml  deny.toml  lefthook.yml  package-lock.json  package.json  release-please-config.json  release-plz.toml  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: build-image.yml  ci.yml  dependabot-auto-merge.yml  dev-image.yml  docs.yml  mutants.yml  release-assets.yml  release-please.yml
crates/linerule/: Cargo.toml
crates/linerule-app/: Cargo.toml  app.manifest  build.rs
crates/linerule-app/src/: boot.rs  cli.rs  console.rs  crash_dump.rs  error.rs  event_ring.rs  logging.rs  main.rs
crates/linerule-app/tests/: cli_smoke.rs
crates/linerule-config/: Cargo.toml
crates/linerule-config/src/: lib.rs
crates/linerule-config/tests/: golden_toml.rs  load.rs  round_trip.rs
crates/linerule-core/: Cargo.toml
crates/linerule-core/benches/: frame.rs  reduce.rs  tick.rs
crates/linerule-core/src/: color.rs  config.rs  diagnostics.rs  geometry.rs  input.rs  lib.rs  render.rs  state.rs
crates/linerule-core/src/color/: perceptual.rs  rgba.rs  units.rs
crates/linerule-core/src/input/: chord.rs  hold.rs  hotkey_map.rs  hud_fade.rs  tick.rs  win32_vk.rs
crates/linerule-core/src/render/: hud_frame.rs  overlay_frame.rs
crates/linerule-core/src/state/: action.rs  delta.rs  mode.rs  reduce.rs
crates/linerule-core/tests/: edge_render.rs  integration_chord_round_trip.rs  integration_config_validation.rs  integration_reduce_pipeline.rs  integration_render_snapshot.rs  integration_tick_chain.rs  property_cycle.rs  property_render.rs  proptests.rs  snapshot_render.rs  unit_newtypes.rs  unit_reduce.rs  unit_render_atoms.rs  unit_screen_rect.rs
crates/linerule-core/tests/snapshots/: integration_render_snapshot__snapshot_horizontal_bottom_edge.snap  integration_render_snapshot__snapshot_horizontal_center.snap  integration_render_snapshot__snapshot_horizontal_negative_cursor.snap  integration_render_snapshot__snapshot_horizontal_top_edge.snap  integration_render_snapshot__snapshot_off_mode_empty.snap  integration_render_snapshot__snapshot_vertical_center.snap  integration_render_snapshot__snapshot_vertical_left_edge.snap  integration_render_snapshot__snapshot_vertical_right_edge.snap  snapshot_render__snapshot_bar_at_bottom_right.snap  snapshot_render__snapshot_bar_at_centre_fhd.snap  snapshot_render__snapshot_bar_at_top_left.snap  snapshot_render__snapshot_bar_on_offset_monitor.snap  snapshot_render__snapshot_bar_with_max_thickness.snap  snapshot_render__snapshot_horizontal_bar_at_bottom_right.snap  snapshot_render__snapshot_horizontal_bar_at_centre_fhd.snap  snapshot_render__snapshot_horizontal_bar_at_top_left.snap  snapshot_render__snapshot_horizontal_bar_on_offset_monitor.snap  snapshot_render__snapshot_horizontal_bar_with_max_thickness.snap  snapshot_render__snapshot_horizontal_mask_at_centre_fhd.snap  snapshot_render__snapshot_horizontal_mask_at_top_edge.snap  snapshot_render__snapshot_horizontal_mask_on_offset_monitor.snap  snapshot_render__snapshot_horizontal_mask_with_max_thickness.snap  snapshot_render__snapshot_mask_at_centre_fhd.snap  snapshot_render__snapshot_mask_at_top.snap  snapshot_render__snapshot_off_at_centre.snap  snapshot_render__snapshot_vertical_at_centre_fhd.snap  snapshot_render__snapshot_vertical_bar_at_centre_fhd.snap  snapshot_render__snapshot_vertical_mask_at_centre_fhd.snap  snapshot_render__snapshot_vertical_mask_at_left_edge.snap
crates/linerule-platform/: Cargo.toml
crates/linerule-platform-windows/: Cargo.toml
crates/linerule-platform-windows/examples/: overlay_smoke.rs
crates/linerule-platform-windows/src/: auto_quit.rs  composition_renderer.rs  cursor_tracker.rs  error.rs  ex_style_snapshot.rs  heartbeat.rs  hotkey_host.rs  hud_renderer.rs  lib.rs  messages.rs  monitor_info.rs  overlay_state.rs  overlay_window.rs  render_clock.rs  render_timing.rs  win32_ffi.rs  window_class.rs  windows_app.rs  wndproc.rs
crates/linerule-platform-windows/src/win32_ffi/: core.rs  dwrite.rs  graphics.rs  hotkey.rs  pacer.rs
crates/linerule-platform/src/: chord.rs  lib.rs  mock.rs  windows.rs
crates/linerule-platform/tests/: chord_parse.rs  mock_smoke.rs  non_windows_fallback.rs
crates/linerule/src/: main.rs
crates/linerule/tests/: cli_smoke.rs  readme_drift.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: main.rs  strict_code.rs
docs/: mutation-baseline.md
docs/adr/: 0000-template.md  0001-port-from-csharp.md  0001-tech-stack.md  0002-architecture-principles.md  0002-state-model.md  0003-platform-trait.md  0003-unsafe-isolation.md  0004-coverage-policy.md  0004-windows-only-mvp.md  0005-docker-only-execution.md  0006-dwrite-ffi-isolation.md  0006-workspace-lints-single-source.md  0007-debug-build-and-panic-strategy.md  0007-release-pipeline.md  0008-ci-speed-and-failfast.md  0008-error-class-and-app-aggregator.md  0009-diagnostics-cli-and-debug-assertions.md  0009-win32-transparency-via-colorkey.md  0010-platform-direct-dispatch.md  0010-release-assets-workflow.md  0011-lifecycle-adt.md  0011-phase-j-slim-down.md  0012-mode-direct-product.md
tests/manual/: CHECKLIST.md
tools/: cargo-sort.toml
xtask/: Cargo.toml
xtask/src/: ci.rs  dep_graph.rs  lint.rs  main.rs
