[workspace]
resolver = "3"
members = [
    "crates/linerule-app",
    "crates/linerule-core",
    "crates/linerule-platform-windows",
    "xtask",
]
default-members = ["crates/linerule-core", "crates/linerule-app"]

[workspace.package]
edition = "2024"
rust-version = "1.95"
version = "0.2.1"
license = "MIT OR Apache-2.0"
repository = "https://github.com/P4suta/linerule-rs"
authors = ["linerule contributors"]

[workspace.dependencies]
anyhow = "1"

# Bitflag DSL (Modifiers)
bitflags = "2"

# xtask helpers
cargo_metadata = "0.23"

# CLI / config
clap = { version = "4", features = ["derive"] }

# Utilities
directories = "6"
embed-resource = "3"

# Dev-only
proptest = "1"

# Serialization / errors
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
thiserror = "2"

# Structured logging
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter", "fmt", "registry"] }
uuid = { version = "1", features = ["v4", "fast-rng", "serde"] }
# Win32 / COM
windows = "0.62"
windows-core = "0.62"
windows-numerics = "0.3"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

# 美しさのため明示昇格
wildcard_imports = "deny"
mod_module_files = "deny"
or_fun_call = "deny"
unwrap_used = "deny"
expect_used = "warn"
panic = "warn"
todo = "warn"
unimplemented = "warn"
dbg_macro = "deny"
print_stdout = "warn"
print_stderr = "warn"
allow_attributes_without_reason = "deny" # `#[allow]` には reason 必須
disallowed_macros = "deny"               # clippy.toml で禁止リスト
disallowed_types = "deny"                # clippy.toml で禁止リスト
disallowed_methods = "deny"

# 例外（lint そのものの設計と本プロジェクトの方針が噛み合わないもの）
module_name_repetitions = "allow" # `OverlayConfig` 等の自然な命名と衝突
multiple_crate_versions = "allow" # 依存推移グラフ次第、本プロジェクトでは制御不能
cargo_common_metadata = "allow"   # 内部 publish=false のため

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "deny"
unreachable_pub = "warn"
elided_lifetimes_in_paths = "warn"
single_use_lifetimes = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
static_mut_refs = "deny"           # `static mut` 経由参照を禁止
missing_docs = "warn"              # 全 public item に doc 必須 (CI -D warnings 下で実質 deny)

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
opt-level = 3
overflow-checks = false

[profile.dev]
opt-level = 0
debug = "full"

# 速い CI チェック用
[profile.ci]
inherits = "dev"
debug = "line-tables-only"
incremental = false
