[package]
name = "xtask"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "linerule-rs build automation: lint, dep-graph, ci."
publish = false

[[bin]]
name = "xtask"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
cargo_metadata = { workspace = true }
clap = { workspace = true }

[lints]
workspace = true
