[package]
name = "linerule-app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "linerule-rs single binary: GUI overlay + CLI diagnostics."
publish = false

[[bin]]
name = "linerule"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
directories = { workspace = true }
linerule-core = { path = "../linerule-core" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }

[target.'cfg(windows)'.dependencies]
linerule-platform-windows = { path = "../linerule-platform-windows" }

[target.'cfg(windows)'.dependencies.windows]
workspace = true
features = ["Win32_Foundation", "Win32_System_Console"]

[target.'cfg(windows)'.build-dependencies]
embed-resource = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
insta = { workspace = true }
predicates = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
tracing-test = { workspace = true }

[lints]
workspace = true
