[package]
name          = "linerule-core"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true
readme.workspace       = true
keywords.workspace     = true
categories.workspace   = true
description = "Pure-logic core for linerule: Mode/Action state machine, render() pure function, type-safe newtypes"

[lib]
# Integration tests live in `tests/`; the lib target itself has no
# `#[test]` items and no doctests, so skip compiling those harnesses.
test    = false
doctest = false

[lints]
workspace = true

[dependencies]
smallvec  = { workspace = true, features = ["serde"] }
thiserror = { workspace = true }
serde     = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
