[package]
name = "linerule-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Pure logic core for linerule-rs: ADTs, reducers, render, parsers."
publish = false

[package.metadata.cargo-rdme]
readme-path = "../../README.md"

[dependencies]
bitflags = { workspace = true, features = ["serde"] }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
proptest = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
