[package]
name = "linerule-platform-windows"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Windows platform layer for linerule-rs: HWND / DComp / D2D / hotkeys / pacer."
publish = false

[dependencies]
linerule-core = { path = "../linerule-core" }
thiserror = { workspace = true }
tracing = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows-core = { workspace = true }
windows-numerics = { workspace = true }

[target.'cfg(windows)'.dependencies.windows]
workspace = true
features = [
    "Foundation_Numerics",
    "Win32_Foundation",
    "Win32_Graphics_Direct2D",
    "Win32_Graphics_Direct2D_Common",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_DirectComposition",
    "Win32_Graphics_DirectWrite",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
    "Win32_System_Com",
    "Win32_System_LibraryLoader",
    "Win32_UI_Accessibility",
    "Win32_UI_HiDpi",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
]

[target.'cfg(windows)'.dev-dependencies]
anyhow = { workspace = true }
insta = { workspace = true }
proptest = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true

[[example]]
name = "overlay_smoke"
path = "examples/overlay_smoke.rs"
required-features = []
