[package]
name          = "linerule-platform"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true
readme.workspace       = true
keywords.workspace     = true
categories.workspace   = true
description = "Platform abstraction and Windows implementation for linerule (winit + vello + Win32 click-through + global-hotkey)"

[lib]
test    = false
doctest = false

[lints]
workspace = true

[dependencies]
linerule-core     = { workspace = true }
thiserror         = { workspace = true }
tracing           = { workspace = true }
crossbeam-channel = { workspace = true }

# Windows-target-only deps: vello / wgpu / winit / peniko etc. are only
# referenced from `windows.rs` (gated on `cfg(target_os = "windows")`),
# so we scope them to the Windows target spec to keep the Linux dev
# build lean and avoid `cargo shear` flagging them as unused.
[target.'cfg(target_os = "windows")'.dependencies]
windows           = { workspace = true }
winit             = { workspace = true }
# wgpu is intentionally NOT listed: we use it via `vello::wgpu` so the
# dependency graph contains exactly one wgpu version (whatever vello pins).
vello             = { workspace = true }
peniko            = { workspace = true }
raw-window-handle = { workspace = true }
global-hotkey     = { workspace = true }
pollster          = { workspace = true }

# winit / vello / wgpu / peniko / bytemuck / raw-window-handle /
# global-hotkey / windows land in task #11 alongside the real Win32
# overlay impl. They are intentionally absent here so cargo-shear does
# not flag declared-but-unconsumed deps in the v0.1-scaffold state.

[features]
default = []
# Enable in-process mock implementations for testing core via traits without a real OS surface.
mock = []

[dev-dependencies]
# Tests instantiate `crossbeam_channel::Sender` directly to bind to
# `HotkeySink`. bolero / insta / pretty_assertions are added back when
# the first test consumes them (ADR-0008 test strategy).
crossbeam-channel = { workspace = true }
