[package]
name          = "linerule-platform"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true
readme.workspace       = true
keywords.workspace     = true
categories.workspace   = true
description = "Platform-direct event-loop entry for linerule — Windows implementation (winit + Win32 layered-window + global-hotkey)"

[lib]
test    = false
doctest = false

[lints]
workspace = true

[dependencies]
linerule-core = { workspace = true }
thiserror     = { workspace = true }
tracing       = { workspace = true }

# Windows-target-only deps. The Windows render path uses raw GDI +
# `UpdateLayeredWindow` (see ADR-0009) — vello / wgpu / peniko /
# pollster are NOT consumed and intentionally absent. They come back
# in v0.2 alongside the macOS / Linux impls if the cross-platform
# render path goes through Linebender's stack.
[target.'cfg(target_os = "windows")'.dependencies]
crossbeam-channel = { workspace = true }
windows           = { workspace = true }
winit             = { workspace = true }
raw-window-handle = { workspace = true }
global-hotkey     = { workspace = true }

[dev-dependencies]
linerule-core = { workspace = true }
