[package]
name          = "xtask"
version       = "0.0.0"
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
publish        = false
description    = "Internal dev automation for linerule (replaces shell scripts)"

[lints]
workspace = true

[[bin]]
name = "xtask"
path = "src/main.rs"

[dependencies]
clap    = { workspace = true }
walkdir = "2"
regex   = "1"
